fix horizontal scroll

--- a/footer/__container/footer__container.css
+++ b/footer/__container/footer__container.css
@@ -11,8 +11,15 @@
   "copyright";
 }
 
+@media screen and (max-width: 880px) {
+  .footer__container {
+    padding: 0 5px 0 5px;
+  }
+}
+
 @media screen and (max-width: 856px) {
   .footer__container {
+    padding: 0 24px 0 24px;
     min-width: 312px;
     grid-template-areas:
     "media"
